--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         #mapid { height: 180px; }
 
     </style>
-    <title>MY MP</title>
+    <title>GET MY MP</title>
   </head>
   <body>
   <style>
