--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
   <head>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <link href='//api.tiles.mapbox.com/mapbox-gl-js/v0.18.0/mapbox-gl.css' rel='stylesheet' />
+    <link href='//api.tiles.mapbox.com/mapbox-gl-js/v0.18.0/mapbox-gl.css' rel='stylesheet' /> 
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src='//api.tiles.mapbox.com/mapbox-gl-js/v0.18.0/mapbox-gl.js'></script>
+    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
     <style>
         #map { position:relative;}
         .single-map { height:200px;width:250px;}
@@ -14,7 +16,7 @@
         #mapid { height: 180px; }
 
     </style>
-    <title>GET MY MP</title>
+    <title>MY MP</title>
   </head>
   <body>
   <style>
@@ -29,7 +31,7 @@
 
     <div id="app"></div>
 
-    <script src="/build/bundle.js"></script>
+    <script src="/bundle.js"></script>
 
   </body>
 </html>
