--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <link href='//api.tiles.mapbox.com/mapbox-gl-js/v0.18.0/mapbox-gl.css' rel='stylesheet' /> 
+    <link href='//api.tiles.mapbox.com/mapbox-gl-js/v0.18.0/mapbox-gl.css' rel='stylesheet' />
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src='//api.tiles.mapbox.com/mapbox-gl-js/v0.18.0/mapbox-gl.js'></script>
@@ -31,7 +31,7 @@
 
     <div id="app"></div>
 
-    <script src="/bundle.js"></script>
+    <script src="/build/bundle.js"></script>
 
   </body>
 </html>
