--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id="app"></div>
 
-    <script src="/build/bundle.js"></script>
+    <script src="/bundle.js"></script>
 
   </body>
 </html>
